--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@shopwp/blocks",
   "version": "7.0.5",
-  "description": "Gutenberg Blocks for ShopWP",
+  "description": "Gutenberg Blocks for ShopWP.",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.babel.js",
