--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@shopwp/blocks",
   "sideEffects": false,
-  "version": "8.9.15",
+  "version": "8.9.16",
   "description": "Gutenberg Blocks for ShopWP.",
   "main": "index.js",
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "webpack --config webpack.config.babel.js",
     "tests": "jest --watch --maxWorkers=25%"
